--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -2033,20 +2033,20 @@ html {
   color: #2D3748;
 }
 
-.ncpi .pi-mediun-search-bar .pi-search-input {
+.ncpi .pi-medium-search-bar .pi-search-input {
   padding: 9px;
   padding-left: 40px;
   width: 240px;
 }
 
 @media screen and (max-width: 992px) {
-  .ncpi .pi-mediun-search-bar .pi-search-input {
+  .ncpi .pi-medium-search-bar .pi-search-input {
     width: 200px;
   }
 }
 
 @media screen and (max-width: 820px) {
-  .ncpi .pi-mediun-search-bar .pi-search-input {
+  .ncpi .pi-medium-search-bar .pi-search-input {
     width: 150px;
     padding: 10px;
     padding-left: 40px;
@@ -2054,13 +2054,13 @@ html {
 }
 
 @media screen and (max-width: 768px) {
-  .ncpi .pi-mediun-search-bar .pi-search-input {
+  .ncpi .pi-medium-search-bar .pi-search-input {
     width: 100%;
     margin-bottom: 15px;
   }
 }
 
-.ncpi .pi-mediun-search-bar svg {
+.ncpi .pi-medium-search-bar svg {
   top: 7px;
 }
 
