--- a/src/js/inv-template/scss/all.scoped.scss
+++ b/src/js/inv-template/scss/all.scoped.scss
@@ -1,3 +1,4 @@
+@import "_seal.scss";
 :root {
   --pi-inv-secondary: #4c6fff;
   --pi-inv-text-primary: #000000;
@@ -6,409 +7,325 @@
   --pi-inv-text-4th: #31343d;
   --pi-inv-text-5th: #4a5568;
   --pi-inv-white: #fff;
-  --pi-inv-medium: 16px;
+  --pi-inv-medium: 15px;
   --pi-inv-small: 12px;
+  --pi-inv-micro: 12px;
   --pi-inv-primary: #4c6fff;
   --pi-inv-odd: #f7fafc;
   --pi-inv-even: #edf2f7;
+  --pi-inv-font-family-2: "Roboto", sans-serif;
+  --pi-inv-font-family-1: "Inter", sans-serif;
 }
 
 .pi-inv {
-  width: 794px;
   height: 1120px;
+  width: 784px;
   overflow: hidden;
+  margin: 0 auto;
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
   margin: 0 auto;
   background-color: var(--pi-inv-white);
   position: relative;
-  /* ==== invoece to address */
-  /* pi-banking wrap */
-}
 
-.pi-inv a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.pi-inv * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.pi-inv .pi-hedear {
-  display: flex;
-  justify-content: space-between;
-}
-
-.pi-inv .pi-from {
-  width: 45%;
-}
-
-.pi-inv .pi-from address {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-4th);
-  margin-bottom: 15px;
-  margin-top: 18px;
-}
-
-.pi-inv .pi-from address span,
-.pi-inv .pi-from address a {
-  font-weight: 500;
-}
-
-.pi-inv .pi-from-date p {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-}
-
-.pi-inv .pi-from-date p span {
-  font-weight: 400;
-}
-
-.pi-inv .pi-from-time {
-  display: flex;
-  -moz-column-gap: 18px;
-  column-gap: 18px;
-}
-
-.pi-inv .pi-inv-title h2 {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 100%;
-  color: var(--pi-inv-text-4th);
-  margin-bottom: 18px;
-  text-transform: uppercase;
-}
-
-.pi-inv .pi-to {
-  width: 35%;
-}
-
-.pi-inv .pi-to p {
-  font-style: normal;
-  font-weight: 500;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-3th);
-  font-family: Inter;
-  letter-spacing: 0.07px;
-}
-
-.pi-inv .pi-to h6 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-3th);
-  font-family: Inter;
-  letter-spacing: 0.07px;
-}
-
-.pi-inv .pi-to address {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-3th);
-  margin-top: 5px;
-}
-
-.pi-inv .pi-to address p,
-.pi-inv .pi-to address a,
-.pi-inv .pi-to address span {
-  font-weight: 400;
-  margin-top: -5px;
-}
-
-.pi-inv .pi-items-table table {
-  border-spacing: 0;
-  width: 100%;
-  margin-top: 30px;
-  margin-bottom: 24px;
-}
-
-.pi-inv .pi-items-table table thead th {
-  color: var(--pi-inv-white);
-  padding: 10px 35px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: var(--pi-inv-small);
-  line-height: 140%;
-  text-align: left;
-}
-
-.pi-inv .pi-items-table table td {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  padding: 10px 0px 10px 35px;
-  color: var(--pi-inv-text-3th);
-}
-
-.pi-inv .pi-items-table table td span {
-  color: var(--pi-inv-text-5th);
-  font-weight: 400;
-}
-
-.pi-inv .pi-items-table table tr th:first-child {
-  padding: 10px 0px 10px 20px;
-}
-
-.pi-inv .pi-items-table table tr td:first-child {
-  padding: 10px 0px 10px 20px;
-}
-
-.pi-inv .pi-bank-info {
-  display: flex;
-  justify-content: space-between;
-  -moz-column-gap: 30px;
-  column-gap: 30px;
-  margin-bottom: 15px;
-}
-
-.pi-inv .pi-bank-info h4 {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: var(--pi-inv-medium);
-  line-height: 140%;
-  color: #1a202c;
-}
-
-.pi-inv .pi-bank-info table {
-  margin-top: 10px;
-}
-
-.pi-inv .pi-bank-info table th {
-  text-align: left;
-  padding-right: 20px;
-  padding-left: 0;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 600;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-primary);
-  padding-bottom: 4px;
-}
-
-.pi-inv .pi-bank-info table td {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-primary);
-  text-align: left;
-  padding-bottom: 4px;
-}
-
-.pi-inv .pi-amounting table {
-  border-spacing: 0;
-  width: 210px;
-}
-
-.pi-inv .pi-amounting table tr.pi-before-total th {
-  padding-bottom: 10px;
-}
-
-.pi-inv .pi-amounting table th {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: var(--pi-inv-medium);
-  line-height: 140%;
-  color: var(--pi-inv-text-primary);
-  padding-left: 28px;
-}
-
-.pi-inv .pi-amounting .pi-table-bg th {
-  color: var(--pi-inv-white);
-  padding: 6px;
-  padding-left: 28px;
-  padding-right: 10px;
-}
-
-.pi-inv .pi-amounting .pi-table-bg td {
-  color: var(--pi-inv-white);
-  line-height: 140%;
-}
-
-.pi-inv .pi-note-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.pi-inv .pi-terms h4 {
-  margin-top: 10px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: var(--pi-inv-medium);
-  line-height: 150%;
-  color: var(--pi-inv-text-secondary);
-}
-
-.pi-inv .pi-terms ul {
-  list-style-type: dot;
-}
-
-.pi-inv .pi-terms ul li {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-5th);
-  margin-left: 15px;
-}
-
-.pi-inv .mt-35 {
-  margin-top: 35px;
-}
-
-.pi-inv .pi-note h4 {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: var(--pi-inv-medium);
-  line-height: 150%;
-  color: var(--pi-inv-text-secondary);
-}
-
-.pi-inv .pi-note p {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: var(--pi-inv-small);
-  line-height: 150%;
-  color: var(--pi-inv-text-5th);
-}
-
-.pi-inv .pi-sign {
-  text-align: center;
-  margin-right: 60px;
-}
-
-.pi-inv .pi-sign h4 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: var(--pi-inv-medium);
-  line-height: 150%;
-  color: var(--pi-inv-text-secondary);
-}
-
-.pi-inv .pi-border {
-  border: 0.5px solid #a0aec0;
-  margin: 0 -30px;
-  margin-top: 8px;
-}
-
-@media screen and (max-width: 500px) {
-  .pi-inv .pi-body {
-    margin: 0 15px;
+  .pi-inv-header {
+    display: flex;
+    justify-content: space-between;
   }
-}
+  .pi-inv-head {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    margin-left: 34px;
+    margin-bottom: 10px;
+  }
+  .pi-inv-shapes {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 2fr 1fr;
+  }
 
+  .pi-inv-address {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 31px;
+  }
+  .pi-inv-from {
+    width: 45%;
+  }
+  .pi-inv-from-date {
+    margin-top: 18px;
+  }
+  .pi-inv-from-logo {
+    margin-bottom: 18px;
+  }
+  .pi-inv-from-logo img {
+    max-width: 200px !important;
+    max-height: 80px;
+    border-radius: 10px;
+  }
+  .pi-inv-from h5 {
+    font-family: var(--pi-inv-font-family-2);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 15px;
+    color: #000000;
+    margin-bottom: 9px;
+  }
+  .pi-inv-from h6 {
+    font-family: var(--pi-inv-font-family-2);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 150%;
+    color: #2d3748;
+    margin-bottom: 3px;
+  }
+  .pi-inv-from p {
+    font-family: var(--pi-inv-font-family-1);
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--pi-inv-small);
+    line-height: 140%;
+    color: #4a5568;
+  }
+  .pi-inv-from-date p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+    span {
+      font-weight: 400;
+    }
+  }
+  .pi-inv-from-time {
+    display: flex;
+    column-gap: 18px;
+  }
+  .pi-inv-to h5 {
+    font-family: var(--pi-inv-font-family-2);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 15px;
+    color: #000000;
+    margin-bottom: 9px;
+    margin-top: 18px;
+  }
+  .pi-inv-to h6 {
+    font-family: var(--pi-inv-font-family-2);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 150%;
+    color: #2d3748;
+    margin-bottom: 3px;
+  }
+  .pi-inv-to p {
+    font-family: var(--pi-inv-font-family-1);
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--pi-inv-small);
+    line-height: 140%;
+    color: #4a5568;
+  }
 
-.ncpi .pi-page-content {
-  max-width: 30%;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+  /* ==== invoice to address */
+  .pi-inv-title h2 {
+    font-family: var(--pi-inv-font-family-1);
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 100%;
+    color: var(--pi-inv-text-4th);
+    margin-bottom: 18px;
+    text-transform: uppercase;
+  }
+  .pi-inv-to {
+    width: 35%;
+  }
 
-.ncpi .pi-page-content p {
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 40px;
-  color: #4A5568;
-}
+  // invoice common table
+  .pi-inv-items table {
+    border-spacing: 0;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 24px;
+  }
+  .pi-inv-items table thead th {
+    padding: 10px;
+    color: var(--pi-inv-white);
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 140%;
+    text-align: left;
+  }
 
-.ncpi .pi-badge-border {
-  border: 1px solid var(--pi-text-color-red);
-  padding: 5px;
-  border-radius: 17px;
-  margin-bottom: 30px;
-  margin-top: 15px;
-}
+  .pi-inv-items table td {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 150%;
+    padding: 15px 10px;
+    color: var(--pi-inv-text-3th);
 
-.ncpi .pi-badge-border.pi-green-color {
-  border: 1px solid var(--pi-text-color-green);
-}
+    span {
+      color: var(--pi-inv-text-5th);
+      font-weight: 400;
+    }
+  }
 
-.ncpi .pi-badge-border.pi-green-color .pi-badge-style-one {
-  border: 1px dashed var(--pi-text-color-green);
-}
+  .pi-inv-account {
+    display: flex;
+    justify-content:space-between;
+  }
+  .pi-inv-total table {
+    border-spacing: 0;
+    min-width: 200px;
+  }
 
-.ncpi .pi-badge-style-one {
-  padding: 15px;
-  border: 1px dashed var(--pi-text-color-red);
-  border-radius: 12px;
-  text-align: center;
-}
+  .pi-inv-total table th {
+    padding: 8px 23px;
+    display: block;
+    font-family: Inter;
+    font-style: normal;
+    text-align: left;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 140%;
+    color: var(--pi-inv-text-primary);
+    letter-spacing: 0.5px;
+  }
+  .pi-inv-total table td {
+    text-align: right;
+    font-family: var(--pi-inv-font-family-1);
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--pi-inv-small);
+    line-height: 14px;
+    color: #718096;
+    padding-right: 10px;
+  }
+  // TODO margin-top
+  .pi-inv-total .pi-inv-table-bg th {
+    color: var(--pi-inv-white);
+    padding: 6px;
+    padding-left: 28px;
+    padding-right: 10px;
+  }
+  .pi-inv-total .pi-inv-table-bg td {
+    color: var(--pi-inv-white);
+    line-height: 140%;
+  }
+  tr.pi-inv-table-bg {
+    background-color: var(--pi-inv-primary);
+  }
+  .pi-inv-total .subtotal th {
+    font-weight: 800;
+    color: #1a202c;
+  }
+  .pi-inv-total .subtotal td {
+    font-weight: 800;
+    color: #1a202c;
+  }
+  .pi-inv-total .total {
+    padding-top: 20px;
+  }
+  .pi-inv-total .light th {
+    font-weight: 400;
+  }
+  .pi-inv-total .total td {
+    font-weight: 800;
+    color: #1a202c;
+    font-size: 15px;
+  }
+  .pi-inv-total table tr.pi-inv-before-total th {
+    padding-bottom: 10px;
+  }
+ .pi-inv-section {
+  margin-bottom: 20px;
+ }
+ 
+  .pi-inv-section-content ul {
+    list-style-type: dot;
+    li {
+      font-family: Inter;
+      font-style: normal;
+      font-weight: normal;
+      font-size: var(--pi-inv-micro);
+      line-height: 150%;
+      color: var(--pi-inv-text-5th);
+      margin-left: 15px;
+    }
+  }
+  .mt-35 {
+    margin-top: 35px;
+  }
+  .pi-inv-section-content h4 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 150%;
+    color: var(--pi-inv-text-secondary);
+  }
+  .pi-inv-section-content p {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: var(--pi-inv-micro);
+    line-height: 200%;
+    color: var(--pi-inv-text-5th);
+  }
+  .pi-inv-sign {
+    float: right;
+    padding-right: 40px;
+    margin-top: 20px;
+  }
+  .pi-inv-sign img {
+   max-width: 190px;
+  }
+  .pi-inv-bank {
+    overflow: hidden;
+  }
+  .pi-inv-bank h4 {
+    font-family: var(--pi-inv-font-family-1);
+    font-style: normal;
+    font-weight: 700;
+    font-size: var(--pi-inv-small);
+    line-height: 140%;
+    color: #1a202c;
+    margin-bottom: 6px;
+  }
 
-.ncpi .pi-badge-style-one h4 {
-  font-size: 14px;
-  font-weight: 700;
-  color: var(--pi-text-color-red);
-  border-bottom: 2px solid var(--pi-text-color-red);
-}
+  .pi-inv-bank p {
+    font-family: var(--pi-inv-font-family-1);
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--pi-inv-micro);
+    line-height: 150%;
+    color: #4a5568;
+  }
+  .pi-inv-border {
+    border: 0.5px solid #a0aec0;
+    margin: 0 -30px;
+    margin-top: 8px;
+  }
 
-.ncpi .pi-badge-style-one p {
-  font-size: 12px;
-  margin-top: 5px;
-  line-height: 15px;
-  color: var(--pi-text-color-red);
-}
-
-.ncpi .pi-green-color h4 {
-  font-size: 14px;
-  font-weight: 700;
-  color: #00A74D;
-  border-bottom: 2px solid #00A74D;
-}
-
-.ncpi .pi-green-color p {
-  color: #00A74D;
-}
-
-.ncpi .pi-badge-style-two {
-  padding: 8px 50px;
-  border: 1px solid var(--pi-border-color-gray);
-  margin-bottom: 10px;
-}
-
-.ncpi .pi-badge-style-two h4 {
-  font-size: 14px;
-  font-weight: 700;
-  color: var(--pi-text-color-red);
-}
-
-.ncpi .pi-badge-style-two p {
-  font-size: 12px;
-  margin-top: 0px;
-  color: #2D3748;
-  line-height: 15px;
-}
-
-.pi-inv .pi-sign {
-  img {
-    max-width: 190px;
+  @media screen and (max-width: 500px) {
+    .pi-inv-body {
+      margin: 0 15px;
+    }
   }
 }
