--- a/src/js/inv-template/scss/3.scoped.scss
+++ b/src/js/inv-template/scss/3.scoped.scss
@@ -1,34 +1,31 @@
-.pi-inv {
-  /* ====template three===*/
-}
-.pi-inv .pi-inv-three .pi-body {
+/* ====template three===*/
+.pi-inv .pi-inv-three .pi-inv-body {
   margin: 0 35px;
 }
-.pi-inv .pi-inv-three .pi-top-shape {
+.pi-inv .pi-inv-three .pi-inv-top-shape {
   padding-bottom: 30px;
   position: relative;
 }
-.pi-inv .pi-inv-three .pi-top-shape .pi-shape1 {
+.pi-inv .pi-inv-three .pi-inv-top-shape .pi-inv-shape1 {
   width: 170px;
-  height: 170px;
   position: absolute;
   top: -2px;
   z-index: 10;
   left: -36px;
 }
-.pi-inv .pi-inv-three .pi-top-shape .pi-shape1 svg {
+.pi-inv .pi-inv-three .pi-inv-top-shape .pi-inv-shape1 svg {
   fill: var(--pi-inv-primary);
 }
-.pi-inv .pi-inv-three .pi-top-shape .pi-shape2 {
+.pi-inv .pi-inv-three .pi-inv-top-shape .pi-inv-shape2 {
   position: absolute;
-  bottom: -135px;
+  top: 8px;
   left: -36px;
   z-index: 10;
 }
-.pi-inv .pi-inv-three .pi-top-shape .pi-shape2 svg {
+.pi-inv .pi-inv-three .pi-inv-top-shape .pi-inv-shape2 svg {
   fill: var(--pi-inv-primary);
 }
-.pi-inv .pi-inv-three .pi-top-shape .pi-shape3 {
+.pi-inv .pi-inv-three .pi-inv-top-shape .pi-inv-shape3 {
   width: 187px;
   height: 187px;
   position: absolute;
@@ -36,30 +33,27 @@
   z-index: 0;
   left: -36px;
 }
-.pi-inv .pi-inv-three .pi-top-shape .pi-shape3 svg {
+.pi-inv .pi-inv-three .pi-inv-top-shape .pi-inv-shape3 svg {
   fill: var(--pi-inv-primary);
 }
 .pi-inv .pi-inv-three .pi-inv-title h2 {
   text-align: center;
 }
-.pi-inv .pi-inv-three .pi-items-table table thead {
+.pi-inv .pi-inv-from-logo {
+  margin-bottom: 18px;
+}
+.pi-inv .pi-inv-three .pi-inv-items table thead {
   background-color: var(--pi-inv-primary);
 }
-.pi-inv .pi-inv-three .pi-items-table table tbody tr:nth-child(even) {
+.pi-inv .pi-inv-three .pi-inv-items table tbody tr:nth-child(even) {
   background-color: var(--pi-inv-even);
 }
-.pi-inv .pi-inv-three .pi-items-table table tbody tr:nth-child(odd) {
+.pi-inv .pi-inv-three .pi-inv-items table tbody tr:nth-child(odd) {
   background-color: var(--pi-inv-odd);
 }
-.pi-inv .pi-inv-three tr.pi-table-bg {
-  background-color: var(--pi-inv-primary);
-}
-.pi-inv .pi-inv-three .pi-footer-shape {
+.pi-inv .pi-inv-three .pi-inv-footer-shape {
   position: absolute;
   right: 34px;
   bottom: 0;
   transform: rotate(180deg);
-}
-.pi-inv .pi-inv-three .pi-note-wrap {
-  margin-bottom: 40px;
 }
