--- a/src/js/inv-template/scss/5.scoped.scss
+++ b/src/js/inv-template/scss/5.scoped.scss
@@ -1,88 +1,97 @@
-:root {
-  --pi-inv-primary: #8EB538;
-  --pi-inv-secondary: #424449;
-  --pi-inv-even: #EDF2F5;
-  --pi-inv-odd: #8db53818;
+/* ====template five===*/
+.pi-inv .pi-inv-five .pi-inv-title h2 {
+  font-family: var(--pi-inv-font-family-1);
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 120%;
+  color: #2d3748;
+  text-transform: capitalize;
+  margin-bottom: 1px;
 }
-
-.pi-inv {
-  /* ====template four===*/
+.pi-inv .pi-inv-five .pi-inv-from-logo {
+  margin-bottom: 0px;
 }
-.pi-inv .pi-inv-four .pi-body {
-  margin: 0 35px;
+.pi-inv .pi-inv-five .pi-inv-from address {
+  margin-top: 1px;
 }
-.pi-inv .pi-inv-four .pi-bg-one {
-  background-color: var(--pi-inv-primary);
+.pi-inv .pi-inv-five .pi-inv-from address {
+  font-family: var(--pi-inv-font-family-1);
+  font-size: 10px;
+  color: #4a5568;
 }
-.pi-inv .pi-inv-four .pi-bg-two {
-  background-color: var(--pi-inv-secondary);
+.pi-inv .pi-inv-five .pi-inv-to address {
+  font-family: var(--pi-inv-font-family-1);
+  font-size: 10px;
+  color: #4a5568;
 }
-.pi-inv .pi-inv-four .pi-bg-4th {
-  background-color: var(--pi-inv-text-4th);
+.pi-inv .pi-inv-five .pi-inv-item-wrap {
+  margin: 0 31px;
 }
-.pi-inv .pi-inv-four .pi-hedear {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 53px;
+.pi-inv .pi-inv-five .pi-inv-shape1 {
+  height: 1px;
+  background-color: #ebebeb;
 }
-.pi-inv .pi-inv-four .pi-to {
-  margin-top: -30px;
+.pi-inv .pi-inv-five .pi-inv-shape2 {
+  height: 7px;
+  background-color: #ebebeb;
 }
-.pi-inv .pi-inv-four .pi-to-bg {
-  margin-right: -36px;
-  padding: 16px 36px 16px 20px;
-}
-.pi-inv .pi-inv-four .pi-to-bg address {
-  color: var(--pi-inv-white);
-}
-.pi-inv .pi-inv-four .pi-to-bg p {
-  color: var(--pi-inv-white);
-}
-.pi-inv .pi-inv-four .pi-to-bg h6 {
-  color: var(--pi-inv-white);
-}
-.pi-inv .pi-inv-four .pi-items-table table {
-  width: 106%;
-  margin-left: -23px;
-}
-.pi-inv .pi-inv-four .pi-items-table table thead th {
-  color: var(--pi-inv-white);
-  padding-left: 20px;
-}
-.pi-inv .pi-inv-four .pi-items-table table td {
-  padding-left: 20px;
-}
-.pi-inv .pi-inv-four .pi-items-table table tbody tr:nth-child(even) {
-  background-color: var(--pi-inv-odd);
-}
-.pi-inv .pi-inv-four .pi-items-table table tbody tr:nth-child(odd) {
-  background-color: var(--pi-inv-even);
-}
-.pi-inv .pi-inv-four tr.pi-table-bg {
-  background-color: var(--pi-inv-primary);
-}
-.pi-inv .pi-inv-four tr.pi-table-bg :last-child {
-  margin-right: -35px;
+.pi-inv .pi-inv-five .pi-inv-header {
+  padding-top: 50px;
   display: block;
-  padding: 10px 20px;
-  margin-left: -20px;
-  background-color: var(--pi-inv-primary);
 }
-.pi-inv .pi-inv-four .pi-footer-shape {
-  display: flex;
-  margin-top: 40px;
+.pi-inv .pi-inv-five .pi-inv-items table {
+  border-collapse: collapse;
+  border-bottom: 1px solid #edf2f7;
 }
-.pi-inv .pi-inv-four .pi-footer-shape .pi-shape1 {
-  width: 33.3%;
-  height: 10px;
+.pi-inv .pi-inv-five .pi-inv-items table tbody tr {
+  border-bottom: 1px solid #edf2f7;
 }
-.pi-inv .pi-inv-four .pi-footer-shape .pi-shape2 {
-  width: 33.3%;
-  opacity: 0.8;
-  height: 10px;
+.pi-inv .pi-inv-five .pi-inv-items table thead {
+  background-color: #edf2f7;
 }
-.pi-inv .pi-inv-four .pi-footer-shape .pi-shape3 {
-  width: 33.4%;
-  opacity: 0.6;
-  height: 10px;
+.pi-inv .pi-inv-five .pi-inv-items table thead th {
+  color: #718096;
+}
+.pi-inv .pi-inv-five .pi-inv-total table th {
+  text-transform: uppercase;
+  padding-left: 0;
+  font-weight: 500;
+  color: var(--pi-inv-text-3th) !important;
+}
+.pi-inv .pi-inv-five .pi-inv-table-bg {
+  background: none;
+}
+.pi-inv .pi-inv-five .pi-inv-table-bg th {
+  color: #1A202C !important;
+  font-weight: 900 !important;
+  font-size: var(--pi-inv-medium) !important;
+  line-height: 24px;
+}
+.pi-inv .pi-inv-five .pi-inv-table-bg td {
+  color: #1A202C;
+  font-weight: 900 !important;
+  font-size: var(--pi-inv-medium) !important;
+  line-height: 24px;
+}
+.pi-inv .pi-inv-five .pi-inv-total .total th {
+  font-weight: 800;
+  color: #1a202c;
+  font-size: 15px;
+}
+.pi-inv .pi-inv-five .pi-inv-e-bold td {
+  font-weight: 600 !important;
+  color: #0B062A !important;
+  font-size: var(--pi-inv-small);
+}
+.pi-inv .pi-inv-five .pi-inv-e-bold th {
+  font-weight: 900 !important;
+}
+.pi-inv .pi-inv-five .pi-inv-note-wrap {
+  padding-bottom: 30px;
+}
+.pi-inv .pi-inv-five .pi-inv-bank {
+  background-color: #edf2f7;
+  padding: 13px 20px 30px 20px;
+  width: 235px;
 }
