--- a/src/js/components/invoice/single/style.scoped.scss
+++ b/src/js/components/invoice/single/style.scoped.scss
@@ -1,36 +1,42 @@
-.ncpi .pi-invoice-single-btn .pi-btn {
+.ndpi .pi-invoice-single-btn .pi-btn {
   border-radius: 5px;
   z-index: 10;
   position: relative;
 }
-.ncpi .pi-single-tab-content .pi-page-title {
+
+.ndpi .pi-single-tab-content .pi-page-title {
   margin-bottom: 55px;
 }
+
 @media screen and (max-width: 992px) {
-  .ncpi .pi-single-tab-content .pi-page-title {
+  .ndpi .pi-single-tab-content .pi-page-title {
     margin-bottom: 30px;
     margin-top: 50px;
   }
 }
-.ncpi .pi-single-image-content {
+
+.ndpi .pi-single-image-content {
   position: relative;
 }
-.ncpi .pi-single-image {
+
+.ndpi .pi-single-image {
   opacity: 1;
   display: block;
   width: 100%;
   height: auto;
   transition: 0.5s ease;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   border-radius: 15px !important;
   border: 1px solid var(--pi-border-color-gray);
 }
-.ncpi .pi-single-image.pi-active {
+
+.ndpi .pi-single-image.pi-active {
   border: 5px solid var(--pi-bg-color-blue);
   border-radius: 15px;
 }
-.ncpi .pi-overflow-content {
+
+.ndpi .pi-overflow-content {
   transition: 0.5s ease;
   opacity: 0;
   position: absolute;
@@ -41,19 +47,23 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  background-color: #0a0a0a47;
+  background-color: rgba(10, 10, 10, 0.2784313725);
   border-radius: 15px;
 }
-.ncpi .pi-single-image-content:hover .pi-single-image {
+
+.ndpi .pi-single-image-content:hover .pi-single-image {
   opacity: 0.3;
 }
-.ncpi .pi-single-image-content:hover .pi-active {
+
+.ndpi .pi-single-image-content:hover .pi-active {
   opacity: 1 !important;
 }
-.ncpi .pi-single-image-content:hover .pi-overflow-content {
+
+.ndpi .pi-single-image-content:hover .pi-overflow-content {
   opacity: 1;
 }
-.ncpi .pi-single-image-content a {
+
+.ndpi .pi-single-image-content a {
   transform: translateY(-113%);
   display: block;
   width: 130px;
@@ -65,64 +75,76 @@
   font-weight: 500;
   border-radius: 5px;
 }
-.ncpi .pi-single-image-content .pi-bg-hover-blue:hover {
+
+.ndpi .pi-single-image-content .pi-bg-hover-blue:hover {
   background-color: #4e6de9 !important;
   color: var(--pi-bg-color-white);
 }
-.ncpi .pi-single-image-content a:last-child {
+
+.ndpi .pi-single-image-content a:last-child {
   background-color: var(--pi-bg-color-white) !important;
   color: #2D3748;
   margin-top: 10px;
 }
-.ncpi .pi-invoice-tab-content .pi-modal-content {
+
+.ndpi .pi-invoice-tab-content .pi-modal-content {
   margin: 75px auto;
 }
 
-.ncpi .pi-info-content {
+.ndpi .pi-info-content {
   padding: 35px 30px;
   border-radius: 8px;
 }
+
 @media screen and (max-width: 550px) {
-  .ncpi .pi-info-content {
+  .ndpi .pi-info-content {
     padding: 20px 15px;
   }
 }
-.ncpi .pi-add-info-content {
+
+.ndpi .pi-add-info-content {
   margin-bottom: 20px;
 }
-.ncpi .pi-add-info-content h3 {
+
+.ndpi .pi-add-info-content h3 {
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 5px;
 }
-.ncpi .pi-add-info-content .pi-info-content {
+
+.ndpi .pi-add-info-content .pi-info-content {
   padding: 30px 45px 45px;
   border-radius: 20px;
 }
+
 @media screen and (max-width: 550px) {
-  .ncpi .pi-add-info-content .pi-info-lavel {
+  .ndpi .pi-add-info-content .pi-info-lavel {
     width: 110px;
   }
 }
-.ncpi .pi-add-info-content input[type=number],
-.ncpi .pi-add-info-content input[type=text] {
+
+.ndpi .pi-add-info-content input[type=number],
+.ndpi .pi-add-info-content input[type=text] {
   padding: 12px 6px !important;
   border: 1px solid var(--pi-border-color-gray);
   border-radius: 4px;
   font-size: 10px;
 }
-.ncpi .pi-add-info-content label {
+
+.ndpi .pi-add-info-content label {
   padding: 9px 12px 12px 0;
   display: inline-block;
   font-size: 12px;
   color: #4A5568;
   margin-bottom: 0;
 }
-.ncpi .pi-add-info-content .pi-info-input-field {
+
+.ndpi .pi-add-info-content .pi-info-input-field {
   position: relative;
   width: 135px;
 }
-.ncpi .pi-add-info-content .pi-info-input-field .pi-calendar {
+
+.ndpi .pi-add-info-content .pi-info-input-field .pi-calendar {
   position: absolute;
   top: 1px;
   right: 1px;
@@ -135,27 +157,32 @@
   align-items: center;
   border-radius: 0 5px 5px 0;
 }
+
 @media screen and (max-width: 550px) {
-  .ncpi .pi-add-info-content .pi-info-input-field .pi-calendar {
+  .ndpi .pi-add-info-content .pi-info-input-field .pi-calendar {
     padding: 8px 7px;
   }
 }
-.ncpi .pi-add-info-content .pi-info-form-list {
+
+.ndpi .pi-add-info-content .pi-info-form-list {
   display: flex;
   margin-bottom: 10px;
   justify-content: right;
 }
+
 @media screen and (max-width: 550px) {
-  .ncpi .pi-add-info-content .pi-info-form-list {
+  .ndpi .pi-add-info-content .pi-info-form-list {
     justify-content: center;
   }
 }
-.ncpi .pi-info-logo {
+
+.ndpi .pi-info-logo {
   position: relative;
   top: 50%;
   transform: translatey(-49%);
 }
-.ncpi .pi-info-logo .pi-upload {
+
+.ndpi .pi-info-logo .pi-upload {
   font-weight: 500;
   border: 1px dashed #718096;
   text-align: center;
@@ -166,18 +193,21 @@
   background: #FAFAFA;
   overflow: hidden;
 }
+
 @media screen and (max-width: 550px) {
-  .ncpi .pi-info-logo .pi-upload {
+  .ndpi .pi-info-logo .pi-upload {
     width: 135px;
   }
 }
-.ncpi .pi-info-logo .pi-upload p {
+
+.ndpi .pi-info-logo .pi-upload p {
   font-size: 14px;
   color: #718096;
   font-weight: 500;
   margin-top: 5px;
 }
-.ncpi .pi-info-logo input[type=file] {
+
+.ndpi .pi-info-logo input[type=file] {
   position: absolute;
   cursor: pointer;
   opacity: 0;
@@ -187,46 +217,55 @@
   width: 130px;
   height: 130px;
 }
+
 @media screen and (max-width: 550px) {
-  .ncpi .pi-info-content .pi-info-logo {
+  .ndpi .pi-info-content .pi-info-logo {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
   }
 }
+
 @media screen and (max-width: 500px) {
-  .ncpi .pi-add-info-content {
+  .ndpi .pi-add-info-content {
     padding: 25px 25px;
   }
 }
-.ncpi .pi-from-content {
+
+.ndpi .pi-from-content {
   padding: 40px 35px 35px;
   background: rgba(231, 236, 254, 0.26);
   border-radius: 10px;
 }
-.ncpi .pi-from-content .pi-to {
+
+.ndpi .pi-from-content .pi-to {
   margin-left: auto;
 }
-.ncpi .pi-from-content .pi-from-to-content {
+
+.ndpi .pi-from-content .pi-from-to-content {
   display: flex;
   justify-content: space-between;
 }
-.ncpi .pi-from-content .pi-from-to {
+
+.ndpi .pi-from-content .pi-from-to {
   max-width: 310px;
 }
-.ncpi .pi-from-content .pi-from-to label {
+
+.ndpi .pi-from-content .pi-from-to label {
   font-size: 14px;
   display: block;
   margin-top: 0;
   margin-bottom: 15px;
   font-weight: 500;
 }
-.ncpi .pi-from-content .pi-from-to .pi-sendlist {
+
+.ndpi .pi-from-content .pi-from-to .pi-sendlist {
   display: flex;
   justify-content: right;
   align-items: center;
 }
-.ncpi .pi-from-content .pi-from-to .pi-sendlist .pi-list {
+
+.ndpi .pi-from-content .pi-from-to .pi-sendlist .pi-list {
   cursor: pointer;
   padding: 10px 15px;
   position: relative;
@@ -234,41 +273,49 @@
   left: -10px;
   margin-top: -15px;
 }
-.ncpi .pi-from-content .pi-from-to .pi-sendlist .pi-list svg {
+
+.ndpi .pi-from-content .pi-from-to .pi-sendlist .pi-list svg {
   margin-top: 6px;
   float: right;
   position: absolute;
   margin-left: 15px;
 }
-.ncpi .pi-from-content .pi-title-small {
+
+.ndpi .pi-from-content .pi-title-small {
   font-weight: 700;
   margin-top: 0;
   margin-bottom: 5px;
 }
-.ncpi .pi-from-content .pi-title-small span {
+
+.ndpi .pi-from-content .pi-title-small span {
   float: right;
   cursor: pointer;
   margin-top: -2px;
 }
-.ncpi .pi-from-content .pi-from {
+
+.ndpi .pi-from-content .pi-from {
   padding: 16px 15px 20px 20px;
   border-radius: 8px;
   border: 1px solid #CBD5E0;
 }
-.ncpi .pi-from-content .pi-dropdown-content {
+
+.ndpi .pi-from-content .pi-dropdown-content {
   top: 25px;
   right: -20px;
   box-shadow: none;
   border: 1px solid rgba(221, 221, 221, 0.6588235294);
   text-align: left;
 }
-.ncpi .pi-from-content .pi-dropdown-content a:hover {
+
+.ndpi .pi-from-content .pi-dropdown-content a:hover {
   color: #4c6fff;
 }
-.ncpi .pi-from-content .pi-dropdown-content a {
+
+.ndpi .pi-from-content .pi-dropdown-content a {
   color: #4A5568;
 }
-.ncpi .pi-from-content address {
+
+.ndpi .pi-from-content address {
   font-size: 14px;
   font-style: normal;
   line-height: 20px;
@@ -279,6 +326,7 @@
 .pi-border-right {
   position: relative;
 }
+
 .pi-border-right:before {
   content: "";
   height: 100%;
@@ -288,6 +336,7 @@
   border: 1px dashed #CBD5E0;
   top: 0px;
 }
+
 @media screen and (max-width: 550px) {
   .pi-border-right:before {
     border: 0;
@@ -295,8 +344,9 @@
 }
 
 @media screen and (max-width: 550px) {
+
   .pi-to,
-.pi-from-to {
+  .pi-from-to {
     max-width: 100% !important;
     float: none !important;
   }
@@ -309,61 +359,68 @@
     padding: 20px 15px !important;
   }
 }
-.ncpi .pi-inv-sections .pi-group-input {
+
+.ndpi .pi-inv-sections .pi-group-input {
   position: relative;
 }
-.ncpi .pi-inv-sections .pi-group-input label {
+
+.ndpi .pi-inv-sections .pi-group-input label {
   font-size: 14px;
   font-weight: 600;
   color: #2D3748;
 }
-.ncpi .pi-inv-sections .pi-group-input label svg {
+
+.ndpi .pi-inv-sections .pi-group-input label svg {
   margin-left: 5px;
   cursor: pointer;
   color: #2D3748;
   top: 4px;
   position: relative;
 }
-.ncpi .pi-inv-sections .pi-group-input textarea {
+
+.ndpi .pi-inv-sections .pi-group-input textarea {
   margin-bottom: 25px;
   color: #718096;
   font-size: 12px;
 }
-.ncpi .pi-inv-sections .pi-group-input .pi-field-label .pi-close-icon {
+
+.ndpi .pi-inv-sections .pi-group-input .pi-field-label .pi-close-icon {
   position: absolute;
   right: 0px;
   top: 0%;
   padding: 5px 10px;
   cursor: pointer;
 }
-.ncpi .pi-inv-sections .pi-group-input input {
+
+.ndpi .pi-inv-sections .pi-group-input input {
   width: 50%;
   font-weight: 600;
   margin-bottom: 10px;
 }
-.ncpi .pi-inv-sections .pi-group-input input::-moz-placeholder {
+
+.ndpi .pi-inv-sections .pi-group-input input::-moz-placeholder {
   color: #2D3748 !important;
   font-weight: 600;
 }
-.ncpi .pi-inv-sections .pi-group-input input:-ms-input-placeholder {
+
+.ndpi .pi-inv-sections .pi-group-input input::placeholder {
   color: #2D3748 !important;
   font-weight: 600;
 }
-.ncpi .pi-inv-sections .pi-group-input input::placeholder {
-  color: #2D3748 !important;
-  font-weight: 600;
-}
-.ncpi .pi-right-sidebar h2.pi-title-medium {
+
+.ndpi .pi-right-sidebar h2.pi-title-medium {
   margin-bottom: 15px;
   margin-top: 80px;
   font-size: 20px;
   color: #4A5568;
 }
-.ncpi .pi-right-sidebar .pi-invoice-image {
+
+.ndpi .pi-right-sidebar .pi-invoice-image {
   border: 1px solid #718096;
   border-radius: 10px;
   width: 100%;
 }
-.ncpi .pi-right-content {
+
+.ndpi .pi-right-content {
   background-color: #f7f8fa;
 }
